<resources>
    <string name="app_name">Marsovský PS</string>
    <string name="title">MARSOVSKÝ POZIČNÍ SYSTÉM</string>
    <string name="label_x">MARS-X</string>
    <string name="label_y">MARS-Y</string>
    <string name="placeholder">--</string>
    <string name="status_searching">Hledám signál…</string>
    <string name="status_locked">Pozice zaměřena</string>
    <string name="status_no_permission">Bez oprávnění k poloze to nepůjde.</string>
    <string name="status_no_provider">Zapni GPS / polohové služby.</string>
    <string name="accuracy_fmt">Přesnost: ±%.0f m</string>
</resources>
